// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixMismatches ignores non-semver dependencies 1`] = `
Array [
  Object {
    "contents": Object {
      "dependencies": Object {
        "foo": "link:vendor/foo-0.1.0",
      },
    },
    "filePath": "/a/package.json",
  },
  Object {
    "contents": Object {
      "dependencies": Object {
        "foo": "link:vendor/foo-0.2.0",
      },
    },
    "filePath": "/b/package.json",
  },
]
`;

exports[`fixMismatches when dependencies are installed with different versions when the dependency is a package maintained in this workspace uses the workspace version 1`] = `
Array [
  Object {
    "contents": Object {
      "dependencies": Object {
        "foo": "0.0.1",
      },
    },
    "filePath": "/a/package.json",
  },
  Object {
    "contents": Object {
      "devDependencies": Object {
        "foo": "0.0.1",
      },
    },
    "filePath": "/b/package.json",
  },
  Object {
    "contents": Object {
      "name": "foo",
      "version": "0.0.1",
    },
    "filePath": "/foo/package.json",
  },
]
`;

exports[`fixMismatches when dependencies are installed with different versions when the dependency is not a package maintained in this workspace uses the highest version 1`] = `
Array [
  Object {
    "contents": Object {
      "dependencies": Object {
        "foo": "0.2.0",
      },
    },
    "filePath": "/a/package.json",
  },
  Object {
    "contents": Object {
      "devDependencies": Object {
        "foo": "0.2.0",
      },
    },
    "filePath": "/b/package.json",
  },
]
`;
